--- a/wso2_sense_agent/app/src/main/res/layout/activity_register.xml
+++ b/wso2_sense_agent/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" tools:context="org.wso2.carbon.iot.android.sense.register.RegisterActivity">
+    android:paddingTop="@dimen/activity_vertical_margin" tools:context="org.wso2.carbon.iot.android.sense.RegisterActivity">
 
     <!-- Login progress -->
 
