--- a/wso2_sense_agent/app/src/main/res/layout/app_bar_activity_select_sensor.xml
+++ b/wso2_sense_agent/app/src/main/res/layout/app_bar_activity_select_sensor.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="org.wso2.carbon.iot.android.sense.sensordataview.ActivitySelectSensor">
+    tools:context="org.wso2.carbon.iot.android.sense.realtimeviewer.ActivitySelectSensor">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
