--- a/wso2_sense_agent/app/src/main/res/layout/content_activity_select_sensor.xml
+++ b/wso2_sense_agent/app/src/main/res/layout/content_activity_select_sensor.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_activity_select_sensor"
-    tools:context="org.wso2.carbon.iot.android.sense.sensordataview.ActivitySelectSensor"
+    tools:context="org.wso2.carbon.iot.android.sense.realtimeviewer.ActivitySelectSensor"
     android:id="@+id/parentContainer">
 
     <ListView
