--- a/wso2_sense_agent/app/src/main/res/layout/activity_register.xml
+++ b/wso2_sense_agent/app/src/main/res/layout/activity_register.xml
@@ -24,18 +24,20 @@
                 android:layout_height="wrap_content" android:hint="@string/prompt_username"
                 android:id="@+id/username"
                 android:inputType="text"
-                android:maxLines="1" android:singleLine="true"/>
+                android:maxLines="1" android:singleLine="true"
+                android:text="admin"/>
 
             <EditText android:id="@+id/password" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_password"
                 android:inputType="textPassword"
-                android:maxLines="1" android:singleLine="true" />
+                android:maxLines="1" android:singleLine="true"
+                      android:text="admin"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/hostname"
                 android:id="@+id/hostname"
-                android:text=""
+                android:text="https://10.100.7.37:9443"
                 android:inputType="text"
                 android:maxLines="1" android:singleLine="true"/>
 
