--- a/wso2_sense_agent/app/src/main/res/values/strings_activity_register.xml
+++ b/wso2_sense_agent/app/src/main/res/values/strings_activity_register.xml
@@ -5,7 +5,7 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Register Device</string>
     <string name="action_sign_in_short">Sign in</string>
-
+    <string name="sessionId">sessionId</string>
     <string name="error_invalid_username">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
